--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,9 @@ plugins {
     id 'java'
 }
 
-group 'org.vivecraft'
+apply plugin: "maven-publish"
+
+group 'com.github.fayer3'
 version '1.0'
 
 repositories {
